[build-system]
requires = [
  "setuptools>=51.0",
  "wheel>=0.36",
  "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "aioloop_proxy/_version.py"

[tool.towncrier]
package = "aioloop_proxy"
filename = "CHANGES.rst"
directory = "CHANGES/"
title_format = "{version} ({project_date})"
issue_format = ":issue:`{issue}`"
