[metadata]
name = aioloop-proxy
version = attr: aioloop_proxy.__version__
url = https://github.com/aio-libs/aiohttp
project_urls =
  Chat: Gitter = https://gitter.im/aio-libs/Lobby
  CI: GitHub Actions = https://github.com/aio-libs/aioloop-proxy/actions?query=workflow%%3ACI
  Coverage: codecov = https://codecov.io/github/aio-libs/aioloop-proxy
  GitHub: issues = https://github.com/aio-libs/aioloop-proxy/issues
  GitHub: repo = https://github.com/aio-libs/aioloop-proxy
description = Asyncio loop proxy for testing purposes
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache 2
license_files = LICENSE.txt
classifiers =
  Development Status :: 4 - Beta

  Framework :: AsyncIO

  Intended Audience :: Developers
  Topic :: Software Development :: Testing

  License :: OSI Approved :: Apache Software License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages=find:
zip_safe = False
python_requires = >=3.7.0
include_package_data = True

install_requires =
  typing-extensions >= 4.0; python_version < "3.8"

[coverage:run]
branch = True
omit = tests/*


[flake8]
# TODO: don't disable D*, fix up issues instead
ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811,D1,D4
max-line-length = 88
